# FlyPlayWeb

./: .gitignore  .markdownlint.json  DATABASE.md  Dockerfile  MIGRATE.md  README.md  docker-compose.yml  main.py  pyproject.toml
Backend/: .env.example  GeminiServiceApi.md  Gemini_Service.md  GoogleMapApi.md  README.md  app.py  check_models.py  config.py  init_db.py  migrate.py  requirements.txt  response.json  run.py  test.json  tutorial_template.py
Backend/apis/: chatgpt_api.py  googlemap_api.py
Backend/bestway/: __init__.py  optimizer.md  optimizer.py  response_test.json  try.py
Backend/controllers/: __init__.py  auth_controller.py  chat_controller.py  map_controller.py  travel_controller.py
Backend/data/: auth_users.db
Backend/decorators/: auth_decorator.py
Backend/models/: cache_model.py  database.py  favorite_model.py  plan_model.py  trip_model.py  user_model.py
Backend/routes/: auth_routes.py  chat_routes.py  map_routes.py  travel_routes.py
Backend/services/: __init__.py  auth_service.py  bestway.py  data_fix_service.py  gemini_service.py  googlemap_service.py  openai_service.py  redis_service.py  travel_service.py  validate_api.py
Backend/travel_login/: decorators.py  extensions.py  factory.py
FlyPlayWeb/: README.md
FlyPlayWeb/Backend/: GoogleMapApi.md  app.py  config.py
UI/: chat.html  choose_departure.html  choose_destination.html  index.html  login.html  setup.html
UI/css/: choose_departure.css  choose_destination.css  index.css  login.css  setup.css
UI/js/: auth.js  chat.js  choose_departure.js  choose_destination.js  edit.js  ui.js  (+14 more)
(+35 files in other folders)
